Unified: Inaccessible brightness btn for ChromeVox

In UnifiedSystemTray, brightness button on the left side of brightness
slider is not clickable. The button is already inaccessible from tab
focus because it's disabled, but it was still visible for ChromeVox.
This CL makes the brightness button inaccessible from ChromeVox. It was
raised in the a11y review.

TEST=manual
BUG=899164

Change-Id: I20e1c934abad74dd72ab602fc5759c48b1f92b9e
Reviewed-on: https://chromium-review.googlesource.com/c/1304285
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603830}
Former-commit-id: 6b8bd2c65693bfcf9ebd7abce8d618af007368b1